big round of dependency upgrades. Eleventy 2.0 -> 3.0

--- a/src/_includes/partials/blog-loop.njk
+++ b/src/_includes/partials/blog-loop.njk
@@ -4,7 +4,7 @@
   <span> Quick note</span>
   {% set definedDate = post.date %} {% include "partials/date.njk" %}
 
-  {{ post.data.content | safe }}
+  {{ post.content | safe }}
 </li>
 
 {% else %}
